# systemdpp

./: CMakeLists.txt  Dockerfile  README.md
cmake/: deps.cmake
data/autocomplete/: _systemdpp-ctl
data/man/: systemdpp-ctl.adoc
data/tests/: config_test.toml  failing_service.toml
include/: commands.hpp  config.hpp  config_loader.hpp  daemon_endpoints.hpp  journald.hpp
scripts/: logger.sh
src/: commands.cpp  config_loader.cpp  ctl.cpp  daemon.cpp  daemon_endpoints.cpp  journald.cpp  main.cpp  run_systemdpp.cpp
tests/: CMakeLists.txt  test_commands.cpp  test_config_load.cpp
